--- a/cosmos/cosmos/parent_templates/base.html
+++ b/cosmos/cosmos/parent_templates/base.html
@@ -13,8 +13,9 @@
 </head>
 <body>
     {%include "topbar.html"%}
-
-    <div class="container-fluid" style="margin-top: 5%;">
+<!--style="margin-top: 5%; margin-bottom: 1%;"
+ style="margin-top: 3rem; padding-top: 1.5rem; padding-bottom: 1.5rem;"-->
+    <div class="container-fluid mt-5 py-4">
         {%block content%}{%endblock%}
     </div>
     
