--- a/cosmos/cosmos/parent_templates/topbar.html
+++ b/cosmos/cosmos/parent_templates/topbar.html
@@ -6,7 +6,8 @@
         <a href="{% url 'main:home' %}" class="nav-link text-secondary">COSMOS</a>
     </div>
 
-    <div>
+    <div class="d-flex justify-content-between align-items-center"><!---->
+        <a class="btn btn-primary me-2" href="#">COMPARADOR</a>
         <form class="input-group" role="search" method="GET" action="{% url 'main:search' %}">
             <button class="btn btn-primary input-group-text" type="submit" id="search-addon"><i class="fa-solid fa-magnifying-glass"></i></button>
             <input class="form-control" type="search" name="q" placeholder="Buscar..." aria-label="Search" aria-describedby="search-addon">
