--- a/cosmos/cosmos/parent_templates/topbar.html
+++ b/cosmos/cosmos/parent_templates/topbar.html
@@ -14,6 +14,14 @@
             <!--<input type="hidden" name="cat" value="{{request.GET.cat}}">
             <input type="hidden" name="uni" value="{{request.GET.uni}}">-->
         </form>
+        <div>
+            {%if user.is_authenticated%}
+	           <a href="{% url 'auth:logout' %}">LOGOUT</a><a href="{% url 'auth:profile' %}">PROFILE</a>
+            {%else%}
+	            <a href="{% url 'auth:login' %}">LOGIN</a><a href="{% url 'auth:signin' %}">SIGN IN</a>
+            {%endif%}
+        </div>
+        
     </div>
     
 </nav>
