--- a/cosmos/cosmos/parent_templates/topbar.html
+++ b/cosmos/cosmos/parent_templates/topbar.html
@@ -3,7 +3,7 @@
         style="position: fixed; top: 0; width: 100%; z-index: 1;">
 
     <div>
-        <a href="{% url 'main:home' %}" class="nav-link text-secondary">COSMOS</a>
+        <a href="{% url 'main:home' %}" class="nav-link text-secondary"><img src="static/logo.png" alt="COSMOS" style="width:42px;height:42px";>
     </div>
 
     <div class="d-flex justify-content-between align-items-center"><!---->
@@ -16,9 +16,9 @@
         </form>
         <div>
             {%if user.is_authenticated%}
-	           <a href="{% url 'auth:logout' %}">LOGOUT</a><a href="{% url 'auth:profile' %}">PROFILE</a>
+	           <a href="{% url 'auth:logout' %}">LOGOUT</a> / <a href="{% url 'auth:profile' %}">PROFILE</a>
             {%else%}
-	            <a href="{% url 'auth:login' %}">LOGIN</a><a href="{% url 'auth:signin' %}">SIGN IN</a>
+	            <a href="{% url 'auth:login' %}">LOGIN</a> / <a href="{% url 'auth:signin' %}">SIGN IN</a>
             {%endif%}
         </div>
         
