--- a/cosmos/cosmos/parent_templates/footer.html
+++ b/cosmos/cosmos/parent_templates/footer.html
@@ -1,12 +1,37 @@
+<footer class="text-light text-center py-2" style="background-color: #5A0000;">
+    <div class="container">
+        <br>
+        <div class="row mb-3">
+            <div class="col">
+                <h5>Contact Us</h5>
+            </div>
+            <div class="col">
+                <h5>Terms of Service</h5>
+            </div>
+            <div class="col">
+                <h5>Privacy Policy</h5>
+            </div>
+        </div>
+        <br>
+        <div class="row justify-content-between">
+            <div class="col-auto">
+                <div class="social-icons">
+                    <a href="https://www.instagram.com/" class="btn btn-circle">
+                        <i class="bi bi-instagram"></i>
+                    </a>
+                    <a href="https://www.facebook.com/" class="btn btn-circle">
+                        <i class="bi bi-facebook"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/" class="btn btn-circle">
+                        <i class="bi bi-linkedin"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="col-auto d-flex align-items-center">
+                <button class="btn btn-dark"> <i class="bi bi-globe" style="margin-right: 5px;"></i>Español (AR)</button>
+            </div>
+        </div>
 
-<footer class="text-light text-center bg-dark py-2">
-
-    <p class="mt-3">
-        <a href="https://github.com/LaCajaVengadora">Código de GitHub</a> · 
-        <a href="https://matias.me/nsfw/">TODO</a> · 
-        <a href="https://matias.me/nsfw/">TODO</a>
-    </p>
-
-    <p class="my-2">&copy; 2024 Cosmos. Todos los derechos reservados.</p>
-    
+        <p class="my-2">&copy; 2024 Cosmos. Todos los derechos reservados.</p>
+    </div>
 </footer>
