--- a/cosmos/cosmos/parent_templates/topbar.html
+++ b/cosmos/cosmos/parent_templates/topbar.html
@@ -1,6 +1,6 @@
 
-<nav class="nav navbar bg-dark justify-content-between align-items-center container-fluid text-light px-2" 
-        style="position: fixed; top: 0; width: 100%; z-index: 1;">
+<nav class="nav navbar justify-content-between align-items-center container-fluid text-light px-2" 
+        style="background-color: #FAF9F5; position: fixed; top: 0; width: 100%; z-index: 1;">
 
     <div>
         <a href="{% url 'main:home' %}" class="nav-link text-secondary"><img src="static/logo.png" alt="COSMOS" style="width:42px;height:42px";>
@@ -16,9 +16,9 @@
         </form>
         <div>
             {%if user.is_authenticated%}
-	           <a href="{% url 'auth:logout' %}">LOGOUT</a> / <a href="{% url 'auth:profile' %}">PROFILE</a>
+	           <a href="{% url 'auth:logout' %}">Cerrar sesión</a> / <a href="{% url 'auth:profile' %}">Perfil</a>
             {%else%}
-	            <a href="{% url 'auth:login' %}">LOGIN</a> / <a href="{% url 'auth:signin' %}">SIGN IN</a>
+	            <a href="{% url 'auth:login' %}">Iniciar sesión</a> / <a href="{% url 'auth:signin' %}">Registrarse</a>
             {%endif%}
         </div>
         
