--- a/cosmos/cosmos/parent_templates/topbar.html
+++ b/cosmos/cosmos/parent_templates/topbar.html
@@ -1,27 +1,66 @@
-
 <nav class="nav navbar justify-content-between align-items-center container-fluid text-light px-2" 
-        style="background-color: #FAF9F5; position: fixed; top: 0; width: 100%; z-index: 1;">
+        style="background-color: #EEEAE1; position: fixed; top: 0; width: 100%; z-index: 1;">
 
-    <div>
-        <a href="{% url 'main:home' %}" class="nav-link text-secondary"><img src="static/logo.png" alt="COSMOS" style="width:42px;height:42px";>
-    </div>
+<button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+    <i class="bi bi-list" style="font-size: 1.5rem;"></i>
+</button>
 
-    <div class="d-flex justify-content-between align-items-center"><!---->
-        <a class="btn btn-primary me-2" href="#">COMPARADOR</a>
-        <form class="input-group" role="search" method="GET" action="{% url 'main:search' %}">
-            <button class="btn btn-primary input-group-text" type="submit" id="search-addon"><i class="fa-solid fa-magnifying-glass"></i></button>
-            <input class="form-control" type="search" name="q" placeholder="Buscar..." aria-label="Search" aria-describedby="search-addon">
-            <!--<input type="hidden" name="cat" value="{{request.GET.cat}}">
-            <input type="hidden" name="uni" value="{{request.GET.uni}}">-->
-        </form>
-        <div>
-            {%if user.is_authenticated%}
-	           <a href="{% url 'auth:logout' %}">Cerrar sesión</a> / <a href="{% url 'auth:profile' %}">Perfil</a>
-            {%else%}
-	            <a href="{% url 'auth:login' %}">Iniciar sesión</a> / <a href="{% url 'auth:signin' %}">Registrarse</a>
-            {%endif%}
-        </div>
+<div class="collapse serif" id="navbarToggleExternalContent">
+    <div class="p-4 text-black no-line" style="background-color: #EEEAE1; width: 300px; position: fixed; left: 0; top: 56px; z-index: 2;">
+        <h4 class="bold">Menú</h4>
+        <hr class="text-black">
+        <a class="text-black bold no-line" href="#">Sobre nosotros</a>
         
+        <hr class="text-black">
+        <a class="text-black  no-line bold" href="#" data-bs-toggle="collapse" data-bs-target="#generalSubmenu" aria-expanded="false">General</a>
+        <div class="collapse" id="generalSubmenu">
+            <hr class="text-black">
+            <a class="text-black no-line" style="font-size: 15px;" href="#">Carreras</a> <br>
+            <a class="text-black no-line" style="font-size: 15px;" href="#">Cursos</a> <br>
+            <a class="text-black no-line" style="font-size: 15px;" href="#">Becas</a>
+        </div>
+        <hr class="text-black">
+        <a class="text-black bold no-line" href="#" data-bs-toggle="collapse" data-bs-target="#facultadesSubmenu" aria-expanded="false">Facultades</a>
+        <div class="collapse" id="facultadesSubmenu">
+            <a class="text-black no-line" style="font-size: 15px;" href="#">Arquitectura, Diseño y Urbanismo</a> <br>
+            <a class="text-black no-line" style="font-size: 15px;" href="#">Artes y Humanidades</a> <br>
+            <a class="text-black no-line" style="font-size: 15px;" href="#">Ciencias Agrarias y Alimentarias</a> <br>
+            <a class="text-black no-line" style="font-size: 15px;" href="#">Ciencias de la Salud</a> <br>
+            <a class="text-black no-line" style="font-size: 15px;" href="#">Ciencias de la Vida y Naturales</a> <br>
+            <a class="text-black no-line" style="font-size: 15px;" href="#">Computación y Tecnología de la Información</a> <br>
+            <a class="text-black no-line" style="font-size: 15px;" href="#">Derecho y Ciencias Jurídicas</a> <br>
+            <a class="text-black no-line" style="font-size: 15px;" href="#">Educación y Pedagogía</a> <br>
+            <a class="text-black no-line" style="font-size: 15px;" href="#">Ingeniería y Tecnología</a> <br>
+            <a class="text-black no-line" style="font-size: 15px;" href="#">Ciencias Políticas y Sociales</a>
+        </div>
+        <hr class="text-black">
+        <a class="text-black bold no-line" href="#">Somos usuarios</a>
+        <hr class="text-black">
+        <a class="text-black bold no-line" href="#">Foro</a>
+        <hr class="text-black">
+        <a class="text-black bold no-line" href="#">Ayuda</a>
     </div>
-    
+</div>
+
+<div>
+    <a href="{% url 'main:home' %}" class="nav-link text-secondary">
+        <img src="media/Logos/top.png" alt="COSMOS" style="width:auto;height:60px;">
+    </a>
+</div>
+
+<div class="d-flex align-items-center ms-auto me-5">
+    <a class="nav-link text-secondary" href="#">Foros</a>
+    <a class="nav-link text-secondary" href="#">General</a>
+    <a class="nav-link text-secondary me-3" href="#">Somos usuarios</a>
+
+    <div class="d-flex align-items-center">
+        {% if user.is_authenticated %}
+            <a class="btn btn-primary me-2" href="{% url 'auth:logout' %}" style="background-color: #5A0000; border: none;">Cerrar sesión</a>
+            <a class="btn btn-primary" href="{% url 'auth:profile' %}" style="background-color: #5A0000; border: none;">Perfil</a>
+        {% else %}
+            <a class="btn btn-danger me-2" href="{% url 'auth:login' %}" style="background-color: #5A0000; border: none;">Iniciar sesión</a>
+            <a class="btn btn-danger" href="{% url 'auth:signin' %}" style="background-color: #5A0000; border: none;">Registrarse</a>
+        {% endif %}
+    </div>
+</div>
 </nav>
