Edit (half) CSS classes

--- a/cosmos/cosmos/parent_templates/footer.html
+++ b/cosmos/cosmos/parent_templates/footer.html
@@ -1,6 +1,6 @@
-<footer class="text-light text-center py-2" style="background-color: #5A0000;">
+
+<footer class="text-light text-center py-3 bg-reddish">
     <div class="container">
-        <br>
         <div class="row mb-3">
             <div class="col">
                 <h5>Contact Us</h5>
@@ -12,26 +12,26 @@
                 <h5>Privacy Policy</h5>
             </div>
         </div>
-        <br>
+        
         <div class="row justify-content-between">
             <div class="col-auto">
                 <div class="social-icons">
                     <a href="https://www.instagram.com/" class="btn btn-circle">
-                        <i class="bi bi-instagram"></i>
+                        <i class="fa-brands fa-instagram"></i>
                     </a>
                     <a href="https://www.facebook.com/" class="btn btn-circle">
-                        <i class="bi bi-facebook"></i>
+                        <i class="fa-brands fa-facebook"></i>
                     </a>
                     <a href="https://www.linkedin.com/" class="btn btn-circle">
-                        <i class="bi bi-linkedin"></i>
+                        <i class="fa-brands fa-linkedin"></i>
                     </a>
                 </div>
             </div>
             <div class="col-auto d-flex align-items-center">
-                <button class="btn btn-dark"> <i class="bi bi-globe" style="margin-right: 5px;"></i>Español (AR)</button>
+                <button class="btn btn-dark"> <i class="fa-solid fa-globe me-1"></i>Español (AR)</button>
             </div>
         </div>
 
-        <p class="my-2">&copy; 2024 Cosmos. Todos los derechos reservados.</p>
+        <p class="mb-0">&copy; 2024 Cosmos. Todos los derechos reservados.</p>
     </div>
 </footer>
