--- a/cosmos/cosmos/parent_templates/topbar.html
+++ b/cosmos/cosmos/parent_templates/topbar.html
@@ -1,12 +1,12 @@
-<nav class="nav navbar justify-content-between align-items-center container-fluid text-light px-2" 
-        style="background-color: #EEEAE1; position: fixed; top: 0; width: 100%; z-index: 1;">
+<nav class="nav navbar topbar justify-content-between align-items-center container-fluid 
+    text-light px-2 bg-cream">
 
-<button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-    <i class="bi bi-list" style="font-size: 1.5rem;"></i>
+<button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+    <i class="fa-solid fa-bars" style="font-size: 1.5rem;"></i>
 </button>
 
-<div class="collapse serif" id="navbarToggleExternalContent">
-    <div class="p-4 text-black no-line" style="background-color: #EEEAE1; width: 300px; position: fixed; left: 0; top: 56px; z-index: 2;">
+<div class="collapse serif" id="navbarContent">
+    <div class="p-4 text-black no-line bg-cream collapse-btn">
         <h4 class="bold">Menú</h4>
         <hr class="text-black">
         <a class="text-black bold no-line" href="#">Sobre nosotros</a>
