--- a/cosmos/cosmos/parent_templates/base.html
+++ b/cosmos/cosmos/parent_templates/base.html
@@ -10,7 +10,11 @@
     <script src="{% static 'bootstrap-5.3.3-dist/js/bootstrap.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'owncss/common.css' %}">
+    <link rel="stylesheet" href="{% static 'owncss/colors.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
+    <!-- ↑ CHANGE TO USE STATIC FILES & NOT WEB ↑ -->
+
 </head>
 <body>
     {%include "topbar.html"%}
