--- a/cosmos/cosmos/parent_templates/topbar.html
+++ b/cosmos/cosmos/parent_templates/topbar.html
@@ -12,9 +12,6 @@
 
         <hr class="text-black">
         <a class="text-black fw-bold no-line" href="{% url 'main:home' %}">Home</a>
-
-        <hr class="text-black">
-        <a class="text-black fw-bold no-line" href="https://matias.me/nsfw/">Sobre nosotros</a>
         
         <hr class="text-black">
         <a class="text-black fw-bold no-line" href="" data-bs-toggle="collapse" data-bs-target="#gralMenu">General</a>
@@ -26,8 +23,9 @@
         </div>
 
         <hr class="text-black">
-        <a class="text-black fw-bold no-line" href="" data-bs-toggle="collapse" data-bs-target="#uniMenu">Caregorias</a>
+        <a class="text-black fw-bold no-line" href="" data-bs-toggle="collapse" data-bs-target="#uniMenu">Categorias</a>
         <div class="collapse" id="uniMenu">
+            <hr class="text-black">
             {% for i in cats|dictsort:"name" %}
                 <a class="text-black no-line fs-6" href="#">{{i.name}}</a> <br>
             {% endfor %}
@@ -36,19 +34,23 @@
         <hr class="text-black">
         <a class="text-black fw-bold no-line" href="#">Foro</a>
 
+        <hr class="text-black">
+        <a class="text-black fw-bold no-line" href="https://matias.me/nsfw/">Sobre nosotros</a>
+
     </div>
 </div>
 
+{% load static %}
 <div> <!--             REVISAR             -->
     <a href="{% url 'main:home' %}" class="nav-link text-secondary">
-        <img src="media/Logos/top.png" alt="COSMOS" style="width:auto;height:60px;">
+        <img href="{% static 'top.PNG' %}" alt="COSMOS" style="width:auto;height:60px;">
     </a>
 </div>
 
 <div class="d-flex align-items-center ms-auto me-5">
 
     <a class="nav-link text-secondary me-3" href="https://matias.me/nsfw/">Foro</a>
-    <a class="nav-link text-secondary" href="https://matias.me/nsfw/">Home</a>
+    <a class="nav-link text-secondary me-3" href="https://matias.me/nsfw/">Home</a>
 
     <div class="d-flex align-items-center">
         {% if user.is_authenticated %}
