--- a/cosmos/cosmos/parent_templates/base.html
+++ b/cosmos/cosmos/parent_templates/base.html
@@ -20,7 +20,7 @@
     {%include "topbar.html"%}
 <!--style="margin-top: 5%; margin-bottom: 1%;"
  style="margin-top: 3rem; padding-top: 1.5rem; padding-bottom: 1.5rem;"-->
-    <div class="container-fluid mt-5 py-4 pt-5">
+    <div class="container-fluid my-5 py-4 pt-5">
         {%block content%}{%endblock%}
     </div>
     
