--- a/cosmos/cosmos/parent_templates/base.html
+++ b/cosmos/cosmos/parent_templates/base.html
@@ -7,7 +7,7 @@
 
     {%load static%}
     <script src="https://kit.fontawesome.com/9f98dd71a6.js" crossorigin="anonymous"></script>
-    <script src="{% static 'bootstrap-5.3.3-dist/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'owncss/common.css' %}">
     <link rel="stylesheet" href="{% static 'owncss/colors.css' %}">
