--- a/cosmos/cosmos/parent_templates/footer.html
+++ b/cosmos/cosmos/parent_templates/footer.html
@@ -1,5 +1,5 @@
 
-<footer class="text-light text-center py-3 mt-5 bg-reddish">
+<footer class="text-light text-center py-3 bg-reddish">
     <div class="container">
         <div class="row mb-3">
             <div class="col">
