--- a/cosmos/cosmos/parent_templates/topbar.html
+++ b/cosmos/cosmos/parent_templates/topbar.html
@@ -12,22 +12,30 @@
 
         <hr>
         <a class="text-black fw-bold no-line" href="{% url 'main:home' %}">Home</a>
+
+        <hr>
+        <a class="text-black fw-bold no-line" href="{% url 'main:search' %}">Búsqueda</a>
         
         <hr>
-        <a class="text-black fw-bold no-line" href="" data-bs-toggle="collapse" data-bs-target="#gralMenu">General</a>
+        <a class="text-black fw-bold no-line dropdown-toggle" href="" data-bs-toggle="collapse" data-bs-target="#gralMenu">General</a>
         <div class="collapse" id="gralMenu">
             <hr>
             <a class="text-black no-line fs-6" href="https://matias.me/nsfw/">Carreras</a> <br>
             <a class="text-black no-line fs-6" href="https://matias.me/nsfw/">Becas</a> <br>
             <a class="text-black no-line fs-6" href="https://matias.me/nsfw/">Cursos</a> 
         </div>
+        
+
 
         <hr>
-        <a class="text-black fw-bold no-line" href="" data-bs-toggle="collapse" data-bs-target="#uniMenu">Categorias</a>
+        <a class="text-black fw-bold no-line dropdown-toggle" href="" data-bs-toggle="collapse" data-bs-target="#uniMenu">Categorías</a>
         <div class="collapse" id="uniMenu">
             <hr>
             {% for i in cats|dictsort:"name" %}
-                <a class="text-black no-line fs-6" href="#">{{i.name}}</a> <br>
+            <form method="GET" action="{% url 'main:search' %}">
+                <input type="hidden" name="cat" value="{{ i.id }}">
+                <input class="no-style fs-6" type="submit" value="{{i}}"/> <br>
+            </form>
             {% endfor %}
         </div>
 
@@ -42,15 +50,15 @@
 
 {% load static %}
 <div> <!--             REVISAR             -->
-    <a href="{% url 'main:home' %}" class="nav-link text-secondary">
-        <img href="{% static 'top.PNG' %}" alt="COSMOS" style="width:auto;height:60px;">
+    <a href="{% url 'main:home' %}" class="nav-link">
+        <img src="{% static 'img/logo.png' %}" alt="COSMOS" style="width:7.5rem; height:auto;">
     </a>
 </div>
 
 <div class="d-flex align-items-center ms-auto me-5">
 
     <a class="nav-link text-secondary me-3" href="https://matias.me/nsfw/">Foro</a>
-    <a class="nav-link text-secondary me-3" href="https://matias.me/nsfw/">Home</a>
+    <a class="nav-link text-secondary me-3" href="{% url 'main:home' %}">Home</a>
 
     <div class="d-flex align-items-center">
         {% if user.is_authenticated %}
