Start contact_app

--- a/cosmos/cosmos/parent_templates/topbar.html
+++ b/cosmos/cosmos/parent_templates/topbar.html
@@ -44,7 +44,7 @@
         <a class="text-black fw-bold no-line" href="#">Foro</a>
 
         <hr>
-        <a class="text-black fw-bold no-line" href="https://matias.me/nsfw/">Sobre nosotros</a>
+        <a class="text-black fw-bold no-line" href="{% url 'contact:us' %}">Sobre nosotros</a>
 
     </div>
 </div>
