--- a/cosmos/cosmos/parent_templates/footer.html
+++ b/cosmos/cosmos/parent_templates/footer.html
@@ -3,13 +3,13 @@
     <div class="container">
         <div class="row mb-3">
             <div class="col">
-                <h5>Contact Us</h5>
+                <h5>Contactanos</h5>
             </div>
             <div class="col">
-                <h5>Terms of Service</h5>
+                <h5>Términos de servicio</h5>
             </div>
             <div class="col">
-                <h5>Privacy Policy</h5>
+                <h5>Políticas de privacidad</h5>
             </div>
         </div>
         
