--- a/cosmos/cosmos/parent_templates/topbar.html
+++ b/cosmos/cosmos/parent_templates/topbar.html
@@ -41,7 +41,7 @@
         </div>
 
         <hr>
-        <a class="text-black fw-bold no-line" href="#">Foro</a>
+        <a class="text-black fw-bold no-line" href="{% url 'blog:view' %}">Foro</a>
 
         <hr>
         <a class="text-black fw-bold no-line" href="{% url 'contact:us' %}">Sobre nosotros</a>
