--- a/cosmos/cosmos/parent_templates/base.html
+++ b/cosmos/cosmos/parent_templates/base.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/9f98dd71a6.js" crossorigin="anonymous"></script>
     <script src="{% static 'bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'owncss/common.css' %}">
+    <link rel="stylesheet" href="{% static 'css/common.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
     <!-- ↑ CHANGE TO USE STATIC FILES & NOT WEB ↑ -->
