--- a/cosmos/cosmos/parent_templates/topbar.html
+++ b/cosmos/cosmos/parent_templates/topbar.html
@@ -63,7 +63,7 @@
 <div class="d-flex align-items-center ms-auto me-5">
 
     <a class="nav-link text-secondary me-3" href="{% url 'main:home' %}">Home</a>
-    <a class="nav-link text-secondary me-3" href="https://matias.me/nsfw/">Foro</a>
+    <a class="nav-link text-secondary me-3" href="{% url 'blog:view' %}">Foro</a>
 
     <div class="d-flex align-items-center">
         {% if user.is_authenticated %}
