--- a/cosmos/cosmos/parent_templates/base.html
+++ b/cosmos/cosmos/parent_templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>{%block title%}{%endblock%}</title>
+    <title>Cosmos{%block title%}{%endblock%}</title>
 
     {%load static%}
     <script src="https://kit.fontawesome.com/9f98dd71a6.js" crossorigin="anonymous"></script>
@@ -24,7 +24,7 @@
     {%include "topbar.html"%}
 <!--style="margin-top: 5%; margin-bottom: 1%;"
  style="margin-top: 3rem; padding-top: 1.5rem; padding-bottom: 1.5rem;"-->
-    <div class="container-fluid my-5 py-4 pt-5">
+    <div class="container-fluid my-5 py-4 pt-5" style="min-height: 65vh;">
         {%block content%}{%endblock%}
     </div>
     
