Changes not finished

--- a/cosmos/cosmos/parent_templates/base.html
+++ b/cosmos/cosmos/parent_templates/base.html
@@ -24,7 +24,7 @@
     {%include "topbar.html"%}
 <!--style="margin-top: 5%; margin-bottom: 1%;"
  style="margin-top: 3rem; padding-top: 1.5rem; padding-bottom: 1.5rem;"-->
-    <div class="container-fluid my-5 py-4 pt-5" style="min-height: 65vh;">
+    <div class="container-fluid px-0" style="min-height: 70vh; margin-top: 4rem; margin-bottom: 5rem;">
         {%block content%}{%endblock%}
     </div>
     
