Mod svg & admin models view (para Valen)

--- a/cosmos/cosmos/parent_templates/footer.html
+++ b/cosmos/cosmos/parent_templates/footer.html
@@ -33,7 +33,7 @@
                 <button class="btn btn-dark"><img src="{% static 'svg/globe-solid.svg' %}" style="width: 1rem;" class="me-1">Español (AR)</button>
             </div>
         </div>
-<br>
-        <p class="mb-0">&copy; 2024 Cosmos. Todos los derechos reservados.</p>
+
+        <p class="mb-0 mt-4 fs-6">&copy; 2024 Cosmos. Todos los derechos reservados.</p>
     </div>
 </footer>
