--- a/cosmos/cosmos/parent_templates/topbar.html
+++ b/cosmos/cosmos/parent_templates/topbar.html
@@ -8,7 +8,19 @@
 </button>
 
 <div class="collapse" id="navbarContent">
-    <div class="p-4 no-line bg-cream collapse-btn">
+    <div class="p-4 no-line bg-cream collapse-btn rounded">
+
+        <div class="text-center">
+            {% load static %}
+                <a href="{% url 'auth:profile' %}"><img src="{% static 'img/perfil.png' %}" class="img-fluid rounded-circle" style="width: 7rem; border: 0.25rem solid #5A0000" alt="Perfil"/></a>
+                <div class="my-4">
+                {% if user.is_authenticated %}
+                <a class="btn btn-styles me-2" href="{% url 'auth:logout' %}">Cerrar sesión</a>
+                {% else %}
+                <a class="btn btn-styles me-2" href="{% url 'auth:login' %}">Iniciar sesión</a>
+                {% endif %}
+        </div>
+        </div>
 
         <a class="text-black fw-bold no-line dropdown-toggle" href="" data-bs-toggle="collapse" data-bs-target="#gralMenu">General</a>
         <div class="collapse" id="gralMenu">
@@ -62,8 +74,8 @@
 
 <div class="d-flex align-items-center ms-auto me-5">
 
-    <a class="nav-link text-secondary me-3" href="{% url 'main:home' %}">Home</a>
-    <a class="nav-link text-secondary me-3" href="{% url 'blog:view' %}">Foro</a>
+    <a class="nav-link text-black text-secondary me-3" href="{% url 'main:home' %}">Home</a>
+    <a class="nav-link text-black text-secondary me-3" href="{% url 'blog:view' %}">Foro</a>
 
     <div class="d-flex align-items-center">
         {% if user.is_authenticated %}
