--- a/cosmos/cosmos/parent_templates/footer.html
+++ b/cosmos/cosmos/parent_templates/footer.html
@@ -1,6 +1,6 @@
 
 <footer class="text-light text-center py-3 bg-reddish">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row mb-3">
             <div class="col">
                 <h5>Contactanos</h5>
