--- a/cosmos/cosmos/parent_templates/footer.html
+++ b/cosmos/cosmos/parent_templates/footer.html
@@ -3,13 +3,13 @@
     <div class="container-fluid">
         <div class="row mb-3">
             <div class="col">
-                <h5>Contactanos</h5>
+                <a href="{% url 'us' %}" class="no-line text-white">Contactanos</a>
             </div>
             <div class="col">
-                <h5>Términos de servicio</h5>
+                <a href="#" class="no-line text-white">Términos de servicio</a>
             </div>
             <div class="col">
-                <h5>Políticas de privacidad</h5>
+                <a href="#" class="no-line text-white">Políticas de privacidad</a>
             </div>
         </div>
         
