--- a/cosmos/cosmos/parent_templates/extra/extra.html
+++ b/cosmos/cosmos/parent_templates/extra/extra.html
@@ -2,9 +2,10 @@
 {% block content %}                          
 <br>
 <div class="my-5 py-5 text-center">
-    <h1 style="font-size: 3rem;">YOU'RE NOT SUPPOSED TO BE HERE</h1>
-    <a href="{% url 'main:home' %}" class="btn btn-styles fs-2 mt-2 mb-4">GO BACK HOME</a>
-    <h3>OR...<br>Send us an email :p</h3>
+    <h1 style="font-size: 3rem;">Mmm, no deberías estar aquí</h1>
+    <a href="{% url 'main:home' %}" class="btn btn-styles fs-2 mt-2 mb-3">Vuelve al HOME</a>
+    <h3>o...<br>Envíanos un mail :p</h3>
+    <a href="{% url 'us' %}" class="links fs-3">contacto</a>
     <h3 style="text-decoration: underline; color: #8d1515;">cosmoseducative@cosmos.net.ar</h3>
 </div>
 
